--- a/subgraph/tsconfig.json
+++ b/subgraph/tsconfig.json
@@ -2,6 +2,6 @@
   "extends": "@graphprotocol/graph-ts/types/tsconfig.base.json",
   "include": ["src", "tests"],
   "compilerOptions": {
-    "skipLibCheck": true,
-  },
+    "skipLibCheck": true
+  }
 }
