--- a/client/package.json
+++ b/client/package.json
@@ -39,6 +39,7 @@
     "axios": "^1.5.0",
     "classnames": "^2.3.2",
     "date-fns": "^2.30.0",
+    "date-fns-tz": "^2.0.0",
     "dotenv": "^16.3.1",
     "ethers": "^5.7.2",
     "formik": "^2.4.4",
