--- a/ci/argocd/templates/octant-application.yaml
+++ b/ci/argocd/templates/octant-application.yaml
@@ -15,7 +15,7 @@ spec:
     namespace: $DEPLOYMENT_ID
   sources:
     - repoURL: 'https://gitlab.com/api/v4/projects/48137258/packages/helm/devel'
-      targetRevision: 0.2.21
+      targetRevision: 0.2.23
       chart: octant
       helm:
         parameters:
@@ -73,6 +73,17 @@ spec:
             value: '$WITHDRAWALS_TARGET_CONTRACT_ADDRESS'
           - name: contracts.addresses.glm
             value: '$GLM_CONTRACT_ADDRESS'
+          # Ingress controller
+          - name: ingress.cloudflareProxied.backend-server
+            value: 'true'
+          - name: ingress.cloudflareProxied.web-client
+            value: 'true'
+          - name: ingress.cloudflareProxied.coin-server
+            value: 'true'
+          - name: ingress.cloudflareProxied.graph-node
+            value: 'true'
+          - name: ingress.cloudflareProxied.graph-ipfs
+            value: 'true'
     - repoURL: 'https://gitlab.com/api/v4/projects/48137258/packages/helm/devel'
       targetRevision: 0.0.3
       chart: octant-anvil
