--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -23,6 +23,7 @@ multiproof = { git = "https://github.com/stakewise/multiproof.git", rev = "v0.1.
 dataclass-wizard = "^0.22.2"
 flask-caching = "^2.0.2"
 eventlet = "^0.33.3"
+requests-toolbelt = "^1.0.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.3.1"
