--- a/client/package.json
+++ b/client/package.json
@@ -56,6 +56,7 @@
     "react-router-dom": "^6.15.0",
     "react-slider": "^2.0.6",
     "react-toastify": "^9.1.3",
+    "react-vis": "^1.12.1",
     "socket.io-client": "^4.7.2",
     "viem": "^1.10.8",
     "wagmi": "^1.4.1",
@@ -74,6 +75,7 @@
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
     "@types/react-slider": "^1.3.1",
+    "@types/react-vis": "^1.11.12",
     "@typescript-eslint/eslint-plugin": "^6.6.0",
     "@typescript-eslint/parser": "^6.6.0",
     "@vitejs/plugin-react": "4.0.4",
