--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -583,61 +583,61 @@ Destroy Master App:
     name: persistent/master
     deployment_tier: testing
 
-#E2E Epoch 1:
-#  stage: application
-#  needs: ["E2E app deploy"]
-#  image: !reference [.images, synpress ]
-#  <<: *env_resolve_init
-#  rules:
-#    - !reference [.rules, on_mr]
-#    - !reference [.rules, on_push_to_default_branch ]
-#    - !reference [.rules, on_push_to_master_branch ]
-#  artifacts:
-#    when: on_failure
-#    name: cypress
-#    paths:
-#      - client/cypress/videos
-#      - client/cypress/screenshots
-#    expire_in: 3 days
-#  cache:
-#    - key: $CI_COMMIT_REF_SLUG-yarn-client
-#      policy: pull
-#      paths:
-#        - client/.yarn
-#        - client/node-modules
-#    - key: $CI_COMMIT_REF_SLUG-yarn-root
-#      policy: pull
-#      paths:
-#        - node_modules
-#        - .yarn
-#  script:
-#    - set -e
-#    # Setup NVM to use Node version 16
-#    - source /usr/share/nvm/init-nvm.sh
-#    - nvm use 16
-#    - npm i -g yarn
-#    - cd client
-#    - yarn install --cache-folder .yarn --frozen-lockfile --prefer-offline --no-audit
-#    # Wait for the E2E app to become ready
-#    - bash $CI_PROJECT_DIR/ci/argocd/wait_for_app.sh
-#    - export OCTANT_BASE_URL=https://$(bash $CI_PROJECT_DIR/ci/argocd/get_web_client_url.sh)
-#    - set +e
-#    - yarn synpress:run || CY_EXIT_CODE=$?
-#    - if [[ "$CY_EXIT_CODE" == "0" ]]; then rm -r $CI_PROJECT_DIR/client/cypress/videos $CI_PROJECT_DIR/client/cypress/screenshots; fi
-#    - set -e
-#    # Trigger the stop job
-#    - |
-#      JOB_ID=$(curl --fail -s -XGET --header "PRIVATE-TOKEN: $CI_JOB_CONTROLLER" https://gitlab.com/api/v4/projects/$CI_PROJECT_ID/pipelines/$CI_PIPELINE_ID/jobs | jq '.[] | select(.name == "Destroy E2E App") | .id')
-#
-#      curl -s --fail -X POST \
-#           -H "PRIVATE-TOKEN: $CI_JOB_CONTROLLER" \
-#           "$CI_API_V4_URL/projects/$CI_PROJECT_ID/jobs/$JOB_ID/play"
-#    - exit $CY_EXIT_CODE
-#  variables:
-#    ENV_TYPE: "e2e"
-#    CYPRESS_DOCKER_RUN: "true"
-#    CI: "true"
-#    METAMASK_VERSION: "10.25.0"
+E2E Epoch 1:
+  stage: application
+  needs: ["E2E app deploy"]
+  image: !reference [.images, synpress ]
+  <<: *env_resolve_init
+  rules:
+    - !reference [.rules, on_mr]
+    - !reference [.rules, on_push_to_default_branch ]
+    - !reference [.rules, on_push_to_master_branch ]
+  artifacts:
+    when: on_failure
+    name: cypress
+    paths:
+      - client/cypress/videos
+      - client/cypress/screenshots
+    expire_in: 3 days
+  cache:
+    - key: $CI_COMMIT_REF_SLUG-yarn-client
+      policy: pull
+      paths:
+        - client/.yarn
+        - client/node-modules
+    - key: $CI_COMMIT_REF_SLUG-yarn-root
+      policy: pull
+      paths:
+        - node_modules
+        - .yarn
+  script:
+    - set -e
+    # Setup NVM to use Node version 16
+    - source /usr/share/nvm/init-nvm.sh
+    - nvm use 16
+    - npm i -g yarn
+    - cd client
+    - yarn install --cache-folder .yarn --frozen-lockfile --prefer-offline --no-audit
+    # Wait for the E2E app to become ready
+    - bash $CI_PROJECT_DIR/ci/argocd/wait_for_app.sh
+    - export OCTANT_BASE_URL=https://$(bash $CI_PROJECT_DIR/ci/argocd/get_web_client_url.sh)
+    - set +e
+    - yarn synpress:run || CY_EXIT_CODE=$?
+    - if [[ "$CY_EXIT_CODE" == "0" ]]; then rm -r $CI_PROJECT_DIR/client/cypress/videos $CI_PROJECT_DIR/client/cypress/screenshots; fi
+    - set -e
+    # Trigger the stop job
+    - |
+      JOB_ID=$(curl --fail -s -XGET --header "PRIVATE-TOKEN: $CI_JOB_CONTROLLER" https://gitlab.com/api/v4/projects/$CI_PROJECT_ID/pipelines/$CI_PIPELINE_ID/jobs | jq '.[] | select(.name == "Destroy E2E App") | .id')
+
+      curl -s --fail -X POST \
+           -H "PRIVATE-TOKEN: $CI_JOB_CONTROLLER" \
+           "$CI_API_V4_URL/projects/$CI_PROJECT_ID/jobs/$JOB_ID/play"
+    - exit $CY_EXIT_CODE
+  variables:
+    ENV_TYPE: "e2e"
+    CYPRESS_DOCKER_RUN: "true"
+    CI: "true"
+    METAMASK_VERSION: "10.25.0"
 
 Deploy Release Candidate app:
   stage: deploy
