--- a/subgraph/package.json
+++ b/subgraph/package.json
@@ -30,7 +30,7 @@
     "prettier:ts:pure": "prettier --parser typescript --write",
     "start": "docker-compose -f docker-compose.yml up",
     "start:linux": "docker-compose -f docker-compose-linux.yml up",
-    "test": "graph test",
+    "test": "graph test -v 0.5.4",
     "type-check": "echo 'Not used'"
   },
   "devDependencies": {
