--- a/subgraph/subgraph.yaml
+++ b/subgraph/subgraph.yaml
@@ -80,8 +80,8 @@ dataSources:
       apiVersion: 0.0.7
       language: wasm/assemblyscript
       entities:
-        - EpochProjects
-        - AllEpochsProjects
+        - EpochProjectsInfo
+        - AllEpochProjectsInfo
       abis:
         - name: Proposals
           file: ./abis/Proposals.json
