test: disable E2E jobs

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -370,18 +370,18 @@ Build images:
 #    on_stop: Destroy E2E App
 #    auto_stop_in: 6 hours
 
-#Run MR App:
-#  extends:
-#    - .deploy_anvil
-#  rules:
-#    - !reference [.rules, on_mr_manual ]
-#  variables:
-#    ENV_TYPE: "mr"
-#  environment:
-#    name: mr/$CI_MERGE_REQUEST_IID
-#    url: https://mr-$CI_MERGE_REQUEST_IID-client.octant.wildland.dev
-#    deployment_tier: development
-#    on_stop: Destroy MR App
+Run MR App:
+  extends:
+    - .deploy_anvil
+  rules:
+    - !reference [.rules, on_mr_manual ]
+  variables:
+    ENV_TYPE: "mr"
+  environment:
+    name: mr/$CI_MERGE_REQUEST_IID
+    url: https://mr-$CI_MERGE_REQUEST_IID-client.octant.wildland.dev
+    deployment_tier: development
+    on_stop: Destroy MR App
 
 #E2E contracts:
 #  extends:
@@ -393,15 +393,15 @@ Build images:
 #    - !reference [.rules, on_push_to_master_branch ]
 #  variables:
 #    ENV_TYPE: "e2e"
-#
-#MR contracts:
-#  extends:
-#    - .deploy_anvil_contracts
-#  needs: ["Run MR App"]
-#  rules:
-#    - !reference [.rules, on_mr ]
-#  variables:
-#    ENV_TYPE: "mr"
+
+MR contracts:
+  extends:
+    - .deploy_anvil_contracts
+  needs: ["Run MR App"]
+  rules:
+    - !reference [.rules, on_mr ]
+  variables:
+    ENV_TYPE: "mr"
 
 #E2E app deploy:
 #  extends:
