--- a/ci/argocd/templates/octant-application.yaml
+++ b/ci/argocd/templates/octant-application.yaml
@@ -15,7 +15,7 @@ spec:
     namespace: $DEPLOYMENT_ID
   sources:
     - repoURL: 'https://gitlab.com/api/v4/projects/48137258/packages/helm/devel'
-      targetRevision: 0.2.25
+      targetRevision: 0.2.27
       chart: octant
       helm:
         parameters:
@@ -29,6 +29,8 @@ spec:
             value: '$FRONTEND_RPC_URL'
           - name: 'webClient.viteNetwork'
             value: '$NETWORK_NAME'
+          - name: 'webClient.hideCurrentProjectsOutsideAW'
+            value: 'false'
           ## Graph Node
           - name: graphNode.graph.env.NETWORK
             value: '$NETWORK_NAME'
