--- a/client/cypress/tsconfig.json
+++ b/client/cypress/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "../tsconfig.json",
   "compilerOptions": {
+    "sourceMap": true,
     "allowJs": true,
     "baseUrl": "../",
     "types": [
