test: inline sourcemaps, onboarding tests removed

--- a/client/cypress/tsconfig.json
+++ b/client/cypress/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "../tsconfig.json",
   "compilerOptions": {
     "sourceMap": true,
+    "inlineSourceMap": true,
     "allowJs": true,
     "baseUrl": "../",
     "types": [
