--- a/client/cypress/tsconfig.json
+++ b/client/cypress/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "extends": "../tsconfig.json",
   "compilerOptions": {
-    "inlineSourceMap": true,
+    "sourceMap": false,
     "allowJs": true,
     "baseUrl": "../",
     "types": [
