test: sourcemaps for the client

--- a/client/cypress/tsconfig.json
+++ b/client/cypress/tsconfig.json
@@ -1,8 +1,7 @@
 {
   "extends": "../tsconfig.json",
   "compilerOptions": {
-    "sourceMap": false,
-    "inlineSourceMap": false,
+    "inlineSourceMap": true,
     "allowJs": true,
     "baseUrl": "../",
     "types": [
