--- a/ci/argocd/templates/octant-application.yaml
+++ b/ci/argocd/templates/octant-application.yaml
@@ -87,7 +87,7 @@ spec:
           - name: ingress.cloudflareProxied.graph-ipfs
             value: 'true'
     - repoURL: 'https://gitlab.com/api/v4/projects/48137258/packages/helm/devel'
-      targetRevision: 0.0.3
+      targetRevision: 0.0.4-rc1
       chart: octant-anvil
   syncPolicy:
     automated:
