feat: add epoch snapshotter

--- a/localenv/docker-compose.yaml
+++ b/localenv/docker-compose.yaml
@@ -127,6 +127,13 @@ services:
     networks:
       - octant
 
+  epochs-snapshotter:
+    image: 'octant/snapshotter:latest'
+    depends_on:
+      - backend
+    networks:
+      - octant
+
   control-plane:
     image: octant/control-plane:latest
     ports:
