--- a/localenv/docker-compose.yaml
+++ b/localenv/docker-compose.yaml
@@ -70,6 +70,7 @@ services:
       RPC_URL: http://anvil:8545
       NETWORK: localhost
       SKIP_LOCAL_SUBGRAPH_UPDATE: true
+      EPOCH_DURATION: 600
 
       PROPOSALS_CID: QmXq3Eaz5xQF51J7mWzxDmfrVjDuGdhnirthttJ9Q2WTF8
       PROPOSALS_ADDRESSES: 0x13aB14d9f8a40a0a19f7c8Ba8B23a3F12D25fD12,0x50b641Fb1CC42bE8a292263c68f0612b8182dA51,0x519a0307b7364D21aB1227bf37689271233B3F93,0x5a873cB89BAd323b1acfd998C36aAc6b1a90a91d,0x608309bF063599DdaaF79409879917032377AC44,0x6d614D51D1Ed4eE97A37614F431771Fdb92D5Ae7,0x839a14166Af647F9DD5CdeA616c0354286Cc1593,0xBfD2704FEbD0d6A3f82Ed338731Fdf63077F76Fa,0xdE49c0928ECC3cfb5d07F69f5C82949168Fc6805,0xeAe7825257E71ba345FFcC54D0581ccE819738B9,0x13aB14d9f8a40a0a19f7c8Ba8B23a3F12D25fD12,0x50b641Fb1CC42bE8a292263c68f0612b8182dA51,0x519a0307b7364D21aB1227bf37689271233B3F93,0x5a873cB89BAd323b1acfd998C36aAc6b1a90a91d,0x608309bF063599DdaaF79409879917032377AC44,0x6d614D51D1Ed4eE97A37614F431771Fdb92D5Ae7,0x839a14166Af647F9DD5CdeA616c0354286Cc1593,0xBfD2704FEbD0d6A3f82Ed338731Fdf63077F76Fa,0xdE49c0928ECC3cfb5d07F69f5C82949168Fc6805,0xeAe7825257E71ba345FFcC54D0581ccE819738B9
@@ -94,11 +95,17 @@ services:
     ports:
       - '5000:5000'
     environment:
+      LOCAL_CONTRACTS: true
+      CONTRACTS_DEPLOYER_URL: http://contracts-deployer:8546
+
       OCTANT_ENV: production
       DB_URI: "postgresql://user:password@backend-postgres:5432/octant"
-      ETH_PROVIDER_URL: "http://anvil:8545"
       SUBGRAPH_ENDPOINT: "http://graph-node:8000/subgraphs/name/octant"
+
+      ETH_RPC_PROVIDER_URL: "http://anvil:8545"
       CHAIN_ID: "1337"
+      CHAIN_NAME: "localhost"
+
     depends_on:
       - backend-postgres
       - anvil
